--- a/frontend/gestion/assets/app.config.json
+++ b/frontend/gestion/assets/app.config.json
@@ -1,6 +1,6 @@
 {
     "serverIP": "https://back.super1bet237-cm.com/api/" ,
-    "commentaire":"http://localhost/api/  http://46.202.175.196:8000/api/"
+    "commentaire":"http://localhost/api/  http://46.202.175.196:8000/api/  https://back.super1bet237-cm.com/api/"
 }
 
 
